--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -37,7 +37,7 @@ jobs:
           print(str)' > manifest.json
           cat manifest.json
       - name: Upload JSON file
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@main
         with:
           name: manifest
           path: manifest.json
@@ -52,7 +52,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
       - name: Download JSON file
-        uses: actions/download-artifact@v2
+        uses: actions/download-artifact@main
         with:
           name: manifest
       - name: Compress build files
