--- a/.github/workflows/e2e_test.yaml
+++ b/.github/workflows/e2e_test.yaml
@@ -11,8 +11,8 @@ jobs:
     strategy:
       matrix:
         # ref: https://github.com/actions/runner-images
-        os: [ubuntu-20.04, macos-13]
-        lua_version: [5.4.7, 5.3.5]
+        os: [ubuntu-22.04, macos-13, windows-latest]
+        lua_version: [5.4.7, 5.3.6]
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v4
@@ -30,15 +30,24 @@ jobs:
           brew tap version-fox/tap
           brew install vfox
 
+      - name: install scoop (Windows)
+        if: runner.os == 'Windows'
+        uses: MinoruSekine/setup-scoop@v3
+    
+      - name: install vfox (Windows)
+        if: runner.os == 'Windows'
+        run: |
+          scoop install vfox
+
       - name: add vfox-lua plugin
         if: runner.os == 'Windows'
         run: |
-          vfox add --source https://github.com/yeshan333/vfox-lua/archive/$env:GITHUB_REF.zip lua
+          vfox add --source https://github.com/${{ github.repository_owner }}/vfox-lua/archive/$env:GITHUB_REF.zip lua
 
       - name: add vfox-lua plugin
         if: runner.os != 'Windows'
         run: |
-          vfox add --source https://github.com/yeshan333/vfox-lua/archive/${GITHUB_REF}.zip lua
+          vfox add --source https://github.com/${{ github.repository_owner }}/vfox-lua/archive/${GITHUB_REF}.zip lua
 
       - name: install lua by vfox-lua plugin (Linux)
         if: runner.os == 'Linux'
@@ -77,3 +86,41 @@ jobs:
           else
             echo "Lua version $LUA_VERSION installed successfully"
           fi
+
+      - name: Setup MSYS2 (Windows)
+        uses: msys2/setup-msys2@v2
+        if: runner.os == 'Windows'
+        with:
+          msystem: MINGW64
+          update: true
+          install: >
+            mingw-w64-x86_64-gcc
+            mingw-w64-x86_64-make
+
+      - name: Verify GCC and Make installation (Windows)
+        shell: pwsh
+        if: runner.os == 'Windows'
+        run: |
+          gcc --version
+          make --version
+
+      - name: install Lua by vfox-lua plugin (Windows)
+        if: runner.os == 'Windows'
+        shell: pwsh
+        env:
+          LUA_VERSION: "${{ matrix.lua_version }}"
+        run: |
+          vfox install "lua@$env:LUA_VERSION"
+          vfox use "lua@$env:LUA_VERSION"
+          Invoke-Expression "$(vfox activate pwsh)"
+          echo "===============PATH==============="
+          echo $env:PATH
+          echo "===============PATH==============="
+          Invoke-Expression "$(vfox activate pwsh)"
+          $result=(lua.exe -v)
+          if ($result -match "Lua $env:LUA_VERSION") {
+              Write-Output "lua@$env:LUA_VERSION installed successfully!"
+          } else {
+              Write-Output "lua@$env:LUA_VERSION installed failed!"
+              exit 1
+          }
