--- a/.github/workflows/update_lua_versions.yaml
+++ b/.github/workflows/update_lua_versions.yaml
@@ -10,7 +10,7 @@ permissions:
 
 jobs:
   update_lua_versions:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
 
