--- a/.github/workflows/e2e_test.yaml
+++ b/.github/workflows/e2e_test.yaml
@@ -22,13 +22,14 @@ jobs:
         run: |
           echo "deb [trusted=yes] https://apt.fury.io/versionfox/ /" | sudo tee /etc/apt/sources.list.d/versionfox.list
           sudo apt-get update
-          sudo apt-get install vfox
+          sudo apt-get install vfox libreadline-dev -y
       
       - name: install vfox (MacOS)
         if: runner.os == 'MacOS'
         run: |
           brew tap version-fox/tap
           brew install vfox
+          brew install readline
 
       - name: install scoop (Windows)
         if: runner.os == 'Windows'
