--- a/.github/workflows/deploy_home_page.yaml
+++ b/.github/workflows/deploy_home_page.yaml
@@ -1,9 +1,9 @@
 name: Build and Deploy Homepage
 
 on:
-  # Run every day at 02:00 UTC
+  # Run every day at 03:00 UTC
   schedule:
-    - cron: '0 2 * * *'
+    - cron: '0 3 * * *'
   # Allow manual trigger
   workflow_dispatch:
   # Also run on pushes to main branch
@@ -113,7 +113,7 @@ jobs:
             
             请直接创建完整的 HTML 文件，使用内联 CSS 和 JavaScript，确保文件自包含且可以直接在浏览器中运行。
             
-            项目地址为：https://github.com/vibe-ideas/iflow-cli-action
+            项目地址为：https://github.com/yeshan333/vfox-lua
           api_key: ${{ secrets.IFLOW_API_KEY }}
           # settings_json: ${{ secrets.IFLOW_SETTINGS_JSON }}
           model: "Qwen3-Coder"
