build: update deployment and publishing workflows

--- a/.github/workflows/deploy_home_page.yaml
+++ b/.github/workflows/deploy_home_page.yaml
@@ -1,9 +1,6 @@
 name: Build and Deploy Homepage
 
 on:
-  # Run every day at 03:00 UTC
-  schedule:
-    - cron: '0 3 * * *'
   # Allow manual trigger
   workflow_dispatch:
   # Also run on pushes to main branch
@@ -116,7 +113,7 @@ jobs:
             项目地址为：https://github.com/yeshan333/vfox-lua
           api_key: ${{ secrets.IFLOW_API_KEY }}
           # settings_json: ${{ secrets.IFLOW_SETTINGS_JSON }}
-          model: "Qwen3-Coder"
+          model: "qwen3-max"
           timeout: "1800"
           extra_args: "--debug"
 
